[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player/MaskDude.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Assets/Menu/Buttons/Previous.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menu/Buttons/Next.png" type="Texture" id=3]
[ext_resource path="res://Assets/Background/Yellow.png" type="Texture" id=4]
[ext_resource path="res://fonts/connection_ii/ConnectionII.otf" type="DynamicFontData" id=5]
[ext_resource path="res://UI/CharacterSelect/CharacterSelect.gd" type="Script" id=6]
[ext_resource path="res://fonts/poco/Poco.tres" type="DynamicFont" id=7]
[ext_resource path="res://Assets/Audio/CharacterSelect.ogg" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 5
outline_color = Color( 0.188235, 0.180392, 0.243137, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/HBoxContainer/LeftButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "press_left"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/HBoxContainer/LeftButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.784314, 0.784314, 0.784314, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/HBoxContainer/LeftButton:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "press_right"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/HBoxContainer/RightButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.784314, 0.784314, 0.784314, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/HBoxContainer/RightButton:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[node name="CharacterSelect" type="Control"]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 48
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterName" type="Label" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 384.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 1 )
text = "Mask Dude"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 111.0
margin_right = 384.0
margin_bottom = 151.0
custom_constants/separation = 156
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 72.0
margin_right = 114.0
margin_bottom = 40.0
rect_min_size = Vector2( 42, 40 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="RightButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 270.0
margin_right = 312.0
margin_bottom = 40.0
rect_min_size = Vector2( 42, 40 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Caption" type="Label" parent="VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 199.0
margin_right = 384.0
margin_bottom = 226.0
custom_fonts/font = ExtResource( 7 )
text = "press left or right key to select a character
press enter or space key to confirm"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 192, 124 )
scale = Vector2( 2, 2 )
frames = ExtResource( 1 )
animation = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/press_left = SubResource( 3 )
anims/press_right = SubResource( 4 )

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0
autoplay = true

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/RightButton" to="." method="_on_RightButton_pressed"]
